--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
     "workbench.colorCustomizations": {
-        "commandCenter.border": "#15202b99",
-        "panel.border": "#ccb561",
-        "sash.hoverBorder": "#ccb561",
-        "tab.activeBorder": "#ccb561",
-        "titleBar.activeBackground": "#bda13d",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#bda13d99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "commandCenter.border": "#e7e7e799",
+        "panel.border": "#e53700",
+        "sash.hoverBorder": "#e53700",
+        "tab.activeBorder": "#e53700",
+        "titleBar.activeBackground": "#b22b00",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#b22b0099",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#bda13d"
+    "peacock.color": "#bda13d",
+    "peacock.remoteColor": "#b22b00"
 }
