--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,14 @@
   "name": "Rán Squad Killboard",
   "icons": [
     {
-      "src": "logo512.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo128.png",
+      "src": "logo192.png",
       "type": "image/png",
-      "sizes": "128x128"
+      "sizes": "192x192"
     },
     {
       "src": "logo512.png",
